made a nice light sensor library, moved i2c to use the hardware module

--- a/testing/avr-i2c/Makefile
+++ b/testing/avr-i2c/Makefile
@@ -37,7 +37,7 @@ OPT=s
 
 # List C source files here. (C dependencies are automatically generated.)
 SRC = $(TARGET).c
-SRC += uart.c
+SRC += uart.c light.c twimaster.c
 
 # You can also wrap lines by appending a backslash to the end of the line:
 #SRC += baz.c \
@@ -52,7 +52,7 @@ SRC += uart.c
 # Even though the DOS/Win* filesystem matches both .s and .S the same,
 # it will preserve the spelling of the filenames, and gcc itself does
 # care about how the name is spelled on its command-line.
-ASRC = i2cmaster.S
+#ASRC = 
 
 
 # List any extra directories to look for include files here.
@@ -144,7 +144,7 @@ AVRDUDE_FLAGS = -p $(MCU) -P $(AVRDUDE_PORT) -c $(AVRDUDE_PROGRAMMER)
 
 # Uncomment the following if you do /not/ wish a verification to be
 # performed after programming the device.
-#AVRDUDE_FLAGS += -V
+AVRDUDE_FLAGS += -V
 
 # Increase verbosity level.  Please use this when submitting bug
 # reports about avrdude. See <http://savannah.nongnu.org/projects/avrdude> 
